<resources>
    <string name="app_name">ContatosPos</string>
    <string name="title_activity_login">Bem vindo</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="facebook_app_id">294144827630281</string>
    <string name="fb_login_protocol_scheme">fb294144827630281</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou cadastre-se</string>
    <string name="action_sign_in_short">Entre</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Informação necessária</string>
    <string name="permission_rationale">"Permissão de contato é necessária para autocompletar e-mails."
    </string>


    <!-- Tela de Cadastro -->

    <string name="prompt_cadastro_nome">Nome</string>
    <string name="prompt_cadastro_telefone">Telefone</string>
    <string name="prompt_cadastro_email">Email</string>
    <string name="prompt_cadastro_senha">Senha</string>
    <string name="prompt_cadastro_confirme">Confirme</string>

    <string name="action_cadastro_sign_in">Entrar</string>
    <string name="action_cancelar_sign_out">Cancelar</string>

    <!--Menu Cadastro-->
    <string name="action_settings">Teste</string>
    <string name="title_activity_lista_contatos">ListaContatos</string>
    <string name="Nome">addnome</string>
    <string name="addnome">Nome</string>
    <string name="Telefone">addtelefone</string>
    <string name="addtelefone">Telefone</string>

    <string name="menu_salvar">Salvar</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_alterar_cad">Meu perfil</string>
    <string name="ver_mapa">Mapa</string>
    <string name="menu_sair">Sair</string>
    <string name="lnl_nome">Nome</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_email">Email</string>
    <string name="usuario_inexistente">Usuario inexistente</string>
    <string name="email_duplicado">Email duplicado</string>
    <string name="login_facebook_cancel">Login com Facebook cancelado</string>
    <string name="facebook_login_fail">Falha no login com Facebook</string>
    <string name="criar_conta">Criar uma conta</string>
    <string name="email_sign_in_button">Entrar</string>
    <string name="title_activity_maps">Map</string>

</resources>
