<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.iesb.contatospos.activity.CadastroActivity"
    android:weightSum="1">

    <!-- Login progress -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_user" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_cadastro_nome"
        android:maxLines="1"
        android:singleLine="true" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_cadastro_telefone"
        android:maxLines="1"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_cadastro_email"
        android:maxLines="1"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_cadastro_senha"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_cadastro_confirme"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:layout_width="299dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancelar_sign_out"
            android:id="@+id/button"
            android:layout_gravity="left|center_vertical" />

        <Button
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cadastro_sign_in"
            android:id="@+id/button2"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

</LinearLayout>
